--- a/services.html
+++ b/services.html
@@ -201,7 +201,7 @@
             <input ng-model="mongodb.service.db" type="text"/>
 
             <p>Username</p>
-            <input ng-model="mongodb.service.username" type="text"/>
+            <input ng-model="mongodb.service.user" type="text"/>
 
             <p>Password</p>
             <input ng-model="mongodb.service.pwd" type="password"/>
