--- a/services.html
+++ b/services.html
@@ -177,6 +177,7 @@
         <div class=" well sub-section aws_info" ng-show="service.storage_type=='aws simpledb'">
             <label>Access Key</label><input type="text" ng-model="aws.access_key"/>
             <label>Secret Key</label><input type="text" ng-model="aws.secret_key"/>
+            <label>Region</label>
             <select ng-options="region.value as region.name for region in awsRegions" ng-model="aws.region"></select>
         </div>
         <div class=" well sub-section azure_info" ng-show="service.storage_type =='azure tables'">
