--- a/services.html
+++ b/services.html
@@ -199,8 +199,8 @@
         </div>
         <div class=" well sub-section" ng-show="service.storage_type =='mongodb'">
             <p>Connection String</p>
-            <input ng-model="mongodb.service.dsn" type="text"/>
-
+            <input style="width:80%;" ng-model="mongodb.service.dsn" type="text"/>
+            <div class="alert alert-info"><li class="icon-info-sign"></li>&nbsp;&nbsp;The connection string can include authentication credentials as well as database name. If they contain special characters, please enter them below.</div>
             <p>Database</p>
             <input ng-model="mongodb.service.db" type="text"/>
 
