--- a/swagger/index.html
+++ b/swagger/index.html
@@ -26,7 +26,7 @@
                 dom_id:"swagger-ui-container",
                 supportHeaderParams: true,
                 headers: { "X-DreamFactory-Application-Name": "admin" },
-                supportedSubmitMethods: ['get', 'post', 'put', 'merge', 'delete'],
+                supportedSubmitMethods: ['get', 'post', 'put', 'merge', 'delete', 'patch'],
                 onComplete: function(swaggerApi, swaggerUi){
                     if(console) {
                         console.log("Loaded SwaggerUI")
