--- a/services.html
+++ b/services.html
@@ -163,7 +163,7 @@
 <!--<p>Storage Name</p>-->
 <!--<input ng-model="service.storage_name" type="text"/>-->
 <!--</div>-->
-<div class="section salesforce" ng-show="service.type=='SalesForce'">
+<div class="section salesforce" ng-show="service.type=='Salesforce'">
 
     <p>Username</p>
     <input ng-model="salesforce.username" type="text"/>
