adding sdk link

--- a/navigation.html
+++ b/navigation.html
@@ -7,7 +7,7 @@
     <li onclick="setCurrentApp('services')" id="nav_services"><a href="#/service"><i class="icon icon-exchange"></i> <span>Services</span></a></li>
     <li onclick="setCurrentApp('files')" id="nav_files"><a href="#/file"><i class="icon icon-folder-open"></i> <span>Files</span></a></li>
     <li onclick="setCurrentApp('schema')" id="nav_schema"><a href="#/schema"><i class="icon icon-table"></i> <span>Schema</span></a></li>
-    <li onclick="setCurrentApp('docs')" id="nav_docs"><a ng-click="loadSwagger()" href="#/api"><i class="icon icon-book"></i> <span>API Usage</span></a></li>
+    <li onclick="setCurrentApp('docs')" id="nav_docs"><a ng-click="loadSwagger()" href="#/api"><i class="icon icon-book"></i> <span>API / SDK</span></a></li>
     <li onclick="setCurrentApp('package')" id="nav_package"><a href="#/package"><i class="icon icon-gift"></i> <span>Packages</span></a></li>
     <li onclick="setCurrentApp('config')" id="nav_config"><a href="#/config"><i class="icon icon-cogs"></i> <span>Config</span></a></li>
 
