--- a/swagger.html
+++ b/swagger.html
@@ -1,4 +1,5 @@
 <div  ng-controller = "SwaggerCtrl" id="swagger" class="well" style="display:none">
+    <a href="https://github.com/dreamfactorysoftware/javascript-sdk" target="_new"><div class="btn btn-success">Download our SDK!</div></a><br/><br/>
     <div class="alert alert-info"><b>Important Notes</b>
         <p>
             Use of our API requires SSL3.  If you plan on making requests from Curl, or your Native SDK, make sure you are using version 3.
