--- a/applications.html
+++ b/applications.html
@@ -9,6 +9,8 @@
             <li class="icon-plus-sign-alt"></li>
             Create New App</a>
         </div>
+        <a href="https://github.com/dreamfactorysoftware/javascript-sdk" target="_new"><div class="btn btn-success">Download our SDK!</div></a>
+
     </div>
 </div>
 <table style="width:100%">
