putting controller back in template

--- a/swagger.html
+++ b/swagger.html
@@ -1,4 +1,4 @@
-<div class="well">
+<div class="well" ng-controller="SwaggerCtrl">
     <div class="navbar">
         <div class="navbar-inner">
             <div class="brand">API / SDK</div>
