--- a/swagger.html
+++ b/swagger.html
@@ -1,12 +1,12 @@
-<div class="well" ng-controller="SwaggerCtrl">
-    <div class="navbar">
+<div id="swagctrl" class="well" ng-controller="SwaggerCtrl">
+    <div class="navbar" id="swagbar">
         <div class="navbar-inner">
             <div class="brand">API / SDK</div>
         </div>
     </div>
 
 
-    <ul class="nav nav-tabs">
+    <ul class="nav nav-tabs" id="swagtabs">
         <li data-ng-class="swagger={true: 'active', false: ''}[currentTab=='swagger-pane']"><a href="javascript:void(0)" data-ng-click="showTab('swagger-pane')"
                                                                                                data-toggle="tab">Live API</a></li>
         <li data-ng-class="sdk={true: 'active', false: ''}[currentTab=='sdk-pane']"><a href="javascript:void(0)" data-ng-click="showTab('sdk-pane')"
