initial commit for wizard

--- a/navigation.html
+++ b/navigation.html
@@ -1,4 +1,5 @@
 <ul style="display: block;">
+    <li onclick="setCurrentApp('getting_started')" id="nav_getting_started"><a href="#/"><i class="icon icon-info-sign"></i> <span>QuickStart</span></a></li>
     <li onclick="setCurrentApp('applications')" id="nav_applications"><a href="#/app"><i class="icon icon-cloud"></i> <span>Apps</span></a></li>
     <li onclick="setCurrentApp('users')" id="nav_users"><a href="#/user"><i class="icon icon-user"></i> <span>Users</span></a></li>
     <li onclick="setCurrentApp('roles')" id="nav_roles"><a href="#/role"><i class="icon icon-group"></i> <span>Roles</span></a></li>
