dont allow previous for native apps, removed finish button for now

--- a/quick-start.html
+++ b/quick-start.html
@@ -38,11 +38,11 @@
     </div>
     <div ng-show="step == 3">Step 3
         <div ng-show ="!app.native">Download the javascript-sdk<br/>
-        <p>
-            If you'd like to use our javascript-sdk, which we've just created for this DSP and app, click the download button below.
-            <br/>
+            <p>
+                If you'd like to use our javascript-sdk, which we've just created for this DSP and app, click the download button below.
+                <br/>
 
-        </p></div>
+            </p></div>
         <br/>
         <div class="btn-group">
             <button class="btn" data-ng-click="setStep(2)">Previous</button><button data-ng-click="setStep(4)" class="btn btn-primary">Download SDK</button><button class="btn btn-success" data-ng-click="setStep(4)">Skip To Development Info</button>
@@ -51,7 +51,7 @@
     <div ng-show="step == 4">Step 4
         <br/>New content regarding dev and deployment
         <div class="btn-group">
-            <button class="btn" data-ng-click="setStep(3)">Previous</button><button data-ng-click="showApp()" class="btn btn-success">Finish</button>
+            <button class="btn" data-ng-click="setStep(3)" data-ng-show="app.native != 1">Previous</button>
         </div>
     </div>
 
