adding sdk download frame

--- a/quick-start.html
+++ b/quick-start.html
@@ -54,6 +54,6 @@
             <button class="btn" data-ng-click="setStep(3)" data-ng-show="app.native != 1">Previous</button>
         </div>
     </div>
-
+    <iframe style="display:none" id="sdkDownload" src=""></iframe>
 </div>
 
