--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.1.3/angular.min.js"></script>
 <script src="/public/web-core/js/utils.js"></script>
 <script src="js/ng-grid/ng-grid-1.8.0.js"></script>
+<script src="js/controllers/quickstartctrl.js"></script>
 <script src="js/controllers/userctrl.js"></script>
 <script src="js/controllers/groupctrl.js"></script>
 <script src="js/controllers/rolectrl.js"></script>
