--- a/quick-start.html
+++ b/quick-start.html
@@ -60,7 +60,7 @@
         <!--<h5>Click on the Files link in the left nav to start editing.</h5>-->
         <!--<iframe id="app-preview" src="" frameBorder="0"></iframe>-->
         <!--</div>-->
-        <br/>New content regarding dev and deployment
+        <br/>New content regarding dev and deployment<br/><br/>
         <div class="btn-group">
             <button class="btn" data-ng-click="setStep(3)" data-ng-show="app.native != 1">Previous</button><button class="btn btn-success" data-ng-click="launchApp()" data-ng-show="app.native != 1 && app.storage_service_id != null">Launch My App</button>
         </div>
