--- a/quick-start.html
+++ b/quick-start.html
@@ -24,11 +24,11 @@
 
         <button class="btn btn-success" data-ng-disabled="!app.api_name" data-ng-click="setStep(2)">Next</button>
     </div>
-    <div ng-show="step == 2">Step 2
+    <div ng-show="step == 2">
         Where do you intend on developing?
-        <br/>
+        <br/></br>
         <input type="radio" value=0 data-ng-model="app.storage_service_id"> In my local environment<br/>
-        <input type="radio" value=1 data-ng-model="app.storage_service_id"> Here on the DSP
+        <input type="radio" value=1 data-ng-model="app.storage_service_id"> Here on the DSP<br/>
         <div class="alert alert-info">If you plan to work locally, make sure your CORS settings are set accordingly. *
             for the file system, or your server name.<button class="btn btn-primary" data-ng-click="showCORS()">Show CORS Config</button>
         </div>
@@ -73,7 +73,7 @@
             <button data-ng-disabled = "!app.storage_service_id" class="btn btn-success" data-ng-click="saveConfig();create();setStep(3)">Next</button>
         </div>
     </div>
-    <div ng-show="step == 3">Step 3
+    <div ng-show="step == 3">
         <div ng-show="!app.native">Download the javascript-sdk<br/>
 
             <p>
@@ -91,12 +91,41 @@
         </div>
     </div>
     <div ng-show="step == 4">
-        <!--<div data-ng-show="app.native != '1' && app.storage_service_id != null">-->
-        <!--<h3>Here is your app.</h3>-->
-        <!--<h5>Click on the Files link in the left nav to start editing.</h5>-->
-        <!--<iframe id="app-preview" src="" frameBorder="0"></iframe>-->
-        <!--</div>-->
-        <br/>New content regarding dev and deployment<br/><br/>
+        <div class="alert alert-info"><b>Important Notes</b></div>
+        <p>
+            Use of our API requires SSL3.  If you plan on making requests from Curl, or your Native SDK, make sure you are using version 3.
+            <br/>
+            For example, in curl: <b>curl - 3 url</b>
+        </p>
+        <p>
+            <b>Your API Key</b><br/>
+            Your “api key” to talk to our API is your App Name as defined in the Administration App,
+            For each request, you can :
+        <ol>
+            <li>
+                Append app_name=yourappname to the querystring or
+            </li>
+            <li>
+                Send a request header called <b>X-DreamFactory-Application-Name</b> with the value of your app name.
+            </li>
+        </ol>
+
+        <p><b>Authentication</b>
+            <br/>
+            If your application is not part of the guest user’s role, then access to any service or data components will require authentication.
+            <br/>
+            To authenticate a user, simply POST a JSON string to /user/session that takes on the following format: ‘{“email”:”email_value”, “password”:”password_value”}’
+            <br/>
+            If successful, in the response, you’ll see a session_id has been created.<br/>
+            <b>Very Important</b> : For all future requests to the API, you’ll need to pass the session_id as a new request header called <b>X-DreamFactory-Session-Token</b> 
+
+
+            <!--<div data-ng-show="app.native != '1' && app.storage_service_id != null">-->
+            <!--<h3>Here is your app.</h3>-->
+            <!--<h5>Click on the Files link in the left nav to start editing.</h5>-->
+            <!--<iframe id="app-preview" src="" frameBorder="0"></iframe>-->
+            <!--</div>-->
+            <br/>New content regarding dev and deployment<br/><br/>
         <div class="btn-group">
             <button class="btn" data-ng-click="setStep(3)" data-ng-show="app.native != 1">Previous</button><button class="btn btn-success" data-ng-click="launchApp()" data-ng-show="app.native != 1 && app.storage_service_id != null">Launch My App</button>
         </div>
