CORS by context

--- a/quick-start.html
+++ b/quick-start.html
@@ -29,10 +29,10 @@
         <br/></br>
         <input type="radio" value=0 data-ng-model="app.storage_service_id"> In my local environment<br/>
         <input type="radio" value=1 data-ng-model="app.storage_service_id"> Here on the DSP<br/>
-        <div class="alert alert-info">If you plan to work locally, make sure your CORS settings are set accordingly. *
-            for the file system, or your server name.<button class="btn btn-primary" data-ng-click="showCORS()">Show CORS Config</button>
+        <div data-ng-show="app.storage_service_id == 0" class="alert alert-info">If you plan to work locally, make sure your CORS settings are set accordingly. ( *
+            for the file system, or your server name.)
         </div>
-        <div class="section" id="cors-section" style="display:none">
+        <div class="section" id="cors-section" data-ng-show="app.storage_service_id == 0">
             <h5>CORS Access</h5>
             <label>Choose which hosts have cross domain access to your DSP</label>
             <button ng-click="promptForNew()" class="btn btn-success"><li class="icon-add"></li> Add New Host</button>
@@ -83,9 +83,7 @@
 
             </p></div>
         <br/>
-
         <div class="btn-group">
-            <button class="btn" data-ng-click="setStep(2)">Previous</button>
             <button data-ng-click="downloadSDK();setStep(4)" class="btn btn-primary">Download SDK</button>
             <button class="btn btn-success" data-ng-click="setStep(4)">Skip To Development Info</button>
         </div>
@@ -126,9 +124,7 @@
             <!--<iframe id="app-preview" src="" frameBorder="0"></iframe>-->
             <!--</div>-->
             <br/>New content regarding dev and deployment<br/><br/>
-        <div class="btn-group">
-            <button class="btn" data-ng-click="setStep(3)" data-ng-show="app.native != 1">Previous</button><button class="btn btn-success" data-ng-click="launchApp()" data-ng-show="app.native != 1 && app.storage_service_id != null">Launch My App</button>
-        </div>
+            <button class="btn btn-success" data-ng-click="launchApp()" data-ng-show="app.native != 1 && app.storage_service_id != null">Launch My App</button>
     </div>
     <iframe style="display:none" id="sdk-download" src=""></iframe>
 </div>
